test/corpus/cmd.txt
==================
Shell command
==================

CMD echo "test"

---

(source_file
	(cmd_instruction
		(shell_command)))

==================
Shell command multiline
==================

CMD echo "test" \
	"foo" \
	bar


---

(source_file
	(cmd_instruction
		(shell_command
			(line_continuation)
			(line_continuation))))

==================
Run with shell empty array
==================

cmd []

---

(source_file
	(cmd_instruction
	    (json_string_array)))

==================
Run with shell array
==================

cmd ["echo", "test"]

---

(source_file
  (cmd_instruction
    (json_string_array
      (json_string)
      (json_string))))
